подключил генерацию openapi.yml (закончил правки)
